<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.qthjen.informationapp.MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:textColor="#0079fa"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textSize="45sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/etName"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/etSdt"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sdt"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2">

        <TextView
            android:id="@+id/tv"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/bt"
            android:background="@drawable/custom_button"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:text="@string/bt"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
